Fix CSS issue where results box didn't collapse correctly

--- a/game.css
+++ b/game.css
@@ -8,12 +8,18 @@ h1 {
     gap: 50px;
 }
 
+.result-container {
+    display: flex;
+    max-width: 400px;
+    margin: 20px auto 0px auto;
+    border: 2px solid black;
+    justify-content: center;
+}
+
 .results {
-    margin: 50px 700px 0px 700px;
     padding-bottom: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid black;
 }
 
